# simple-ai-chatbot

./: .env.example  .gitignore  DESIGN.md  README.md  cli.py  main.py  pyproject.toml
config/: config.py
docs/: cli.md  retrieval.md  web_scrape.md
notebooks/: check_milvus_db.ipynb
src/llm/: generator.py
src/retrieval/: router.py  schemas.py
src/scraper/: chunker.py  router.py  schemas.py  scraper.py
src/utils/: logger.py
src/vectorstore/: store.py
transcript/: 2. milvus_vector_storage.md  3. retrieval.md  4. cli.md  6. multi_chat.md  llm_integration.md  web_scrape.md
