[project]
name = "simple-ai-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "pydantic-settings>=2.14.1",
    "pymilvus[milvus_lite]>=3.0.0",
    "sentence-transformers>=2.2.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.13",
]
